# JNI_LINK_A_FILE

./: README.txt
Airkiss/: settings.gradle
Airkiss/app/: build.gradle
Airkiss/app/src/androidTest/java/com/elite/airkiss/: ExampleInstrumentedTest.java
Airkiss/app/src/main/: AndroidManifest.xml
Airkiss/app/src/main/cpp/: Box.cpp  CMakeLists.txt  logUtils.h  native-lib.cpp
Airkiss/app/src/main/cpp/include/: Box.h  logUtils.h
Airkiss/app/src/main/java/com/elite/airkiss/: Main2Activity.java  MainActivity.java
Airkiss/app/src/main/res/layout/: activity_main.xml  activity_main2.xml
Airkiss/app/src/main/res/values/: strings.xml
Airkiss/app/src/test/java/com/elite/airkiss/: ExampleUnitTest.java
Airkiss/gradle/wrapper/: gradle-wrapper.properties
ndktest/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
ndktest/app/src/androidTest/java/com/example/liuhe/ndktest/: ExampleInstrumentedTest.java
ndktest/app/src/main/: AndroidManifest.xml
ndktest/app/src/main/cpp/: show-lib.cpp
ndktest/app/src/main/cpp/include/: Hello.h
ndktest/app/src/main/java/com/example/liuhe/ndktest/: MainActivity.java
ndktest/app/src/main/res/layout/: activity_main.xml
ndktest/app/src/test/java/com/example/liuhe/ndktest/: ExampleUnitTest.java
